--- a/homework.ipynb
+++ b/homework.ipynb
@@ -215,20 +215,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p4 = ..."
+        "p4 = 0.707"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0.707"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p4"
       ]
@@ -286,7 +297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -314,7 +325,7 @@
               "       6.40424913, 6.3692323 , 6.6040807 , 5.7100411 , 5.09037487])"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -347,7 +358,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -358,20 +369,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from scipy.stats import norm\n",
+        "\n",
+        "mean = np.mean(q6)\n",
+        "sd = np.sqrt(np.var(q6))\n",
+        "x_sample = s6\n",
+        "\n",
+        "cdf_value = norm.cdf(x_sample, loc=mean, scale=sd)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p6 = ..."
+        "p6 = cdf_value"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "np.float64(0.32634423791103867)"
+            ]
+          },
+          "execution_count": 18,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p6"
       ]
