more questions filled in

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -881,51 +881,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 42,
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "ValueError",
-          "evalue": "No axis named red for object type DataFrame",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-            "\u001b[32m/workspaces/dx601-homework-07/.venv/lib/python3.12/site-packages/pandas/core/generic.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(cls, axis)\u001b[39m\n\u001b[32m    579\u001b[39m             \u001b[38;5;28;01mreturn\u001b[39;00m cls._AXIS_TO_AXIS_NUMBER[axis]\n\u001b[32m    580\u001b[39m         \u001b[38;5;28;01mexcept\u001b[39;00m KeyError:\n\u001b[32m--> \u001b[39m\u001b[32m581\u001b[39m             \u001b[38;5;28;01mraise\u001b[39;00m ValueError(f\"No axis named {axis} for object type {cls.__name__}\")\n",
-            "\u001b[31mKeyError\u001b[39m: 'red'",
-            "\nDuring handling of the above exception, another exception occurred:\n",
-            "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-            "\u001b[32m/tmp/ipykernel_16072/1881020996.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m      1\u001b[39m x = q10.query(\u001b[33m'green>=0.4'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m x.mean(\u001b[33m'red'\u001b[39m)\n",
-            "\u001b[32m/workspaces/dx601-homework-07/.venv/lib/python3.12/site-packages/pandas/core/frame.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, axis, skipna, numeric_only, **kwargs)\u001b[39m\n\u001b[32m  11716\u001b[39m         skipna: bool = \u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[32m  11717\u001b[39m         numeric_only: bool = \u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[32m  11718\u001b[39m         **kwargs,\n\u001b[32m  11719\u001b[39m     ):\n\u001b[32m> \u001b[39m\u001b[32m11720\u001b[39m         result = super().mean(axis, skipna, numeric_only, **kwargs)\n\u001b[32m  11721\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m isinstance(result, Series):\n\u001b[32m  11722\u001b[39m             result = result.__finalize__(self, method=\u001b[33m\"mean\"\u001b[39m)\n\u001b[32m  11723\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
-            "\u001b[32m/workspaces/dx601-homework-07/.venv/lib/python3.12/site-packages/pandas/core/generic.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, axis, skipna, numeric_only, **kwargs)\u001b[39m\n\u001b[32m  12481\u001b[39m         skipna: bool_t = \u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[32m  12482\u001b[39m         numeric_only: bool_t = \u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[32m  12483\u001b[39m         **kwargs,\n\u001b[32m  12484\u001b[39m     ) -> Series | float:\n\u001b[32m> \u001b[39m\u001b[32m12485\u001b[39m         return self._stat_function(\n\u001b[32m  12486\u001b[39m             \u001b[33m\"mean\"\u001b[39m, nanops.nanmean, axis, skipna, numeric_only, **kwargs\n\u001b[32m  12487\u001b[39m         )\n",
-            "\u001b[32m/workspaces/dx601-homework-07/.venv/lib/python3.12/site-packages/pandas/core/generic.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, name, func, axis, skipna, numeric_only, **kwargs)\u001b[39m\n\u001b[32m  12438\u001b[39m         nv.validate_func(name, (), kwargs)\n\u001b[32m  12439\u001b[39m \n\u001b[32m  12440\u001b[39m         validate_bool_kwarg(skipna, \u001b[33m\"skipna\"\u001b[39m, none_allowed=\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m  12441\u001b[39m \n\u001b[32m> \u001b[39m\u001b[32m12442\u001b[39m         return self._reduce(\n\u001b[32m  12443\u001b[39m             func, name=name, axis=axis, skipna=skipna, numeric_only=numeric_only\n\u001b[32m  12444\u001b[39m         )\n",
-            "\u001b[32m/workspaces/dx601-homework-07/.venv/lib/python3.12/site-packages/pandas/core/frame.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, op, name, axis, skipna, numeric_only, filter_type, **kwds)\u001b[39m\n\u001b[32m  11473\u001b[39m         \u001b[38;5;28;01massert\u001b[39;00m filter_type \u001b[38;5;28;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01mor\u001b[39;00m filter_type == \u001b[33m\"bool\"\u001b[39m, filter_type\n\u001b[32m  11474\u001b[39m         out_dtype = \u001b[33m\"bool\"\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m filter_type == \u001b[33m\"bool\"\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m  11475\u001b[39m \n\u001b[32m  11476\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m axis \u001b[38;5;28;01mis\u001b[39;00m \u001b[38;5;28;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m> \u001b[39m\u001b[32m11477\u001b[39m             axis = self._get_axis_number(axis)\n\u001b[32m  11478\u001b[39m \n\u001b[32m  11479\u001b[39m         \u001b[38;5;28;01mdef\u001b[39;00m func(values: np.ndarray):\n\u001b[32m  11480\u001b[39m             \u001b[38;5;66;03m# We only use this in the case that operates on self.values\u001b[39;00m\n",
-            "\u001b[32m/workspaces/dx601-homework-07/.venv/lib/python3.12/site-packages/pandas/core/generic.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(cls, axis)\u001b[39m\n\u001b[32m    577\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m _get_axis_number(cls, axis: Axis) -> AxisInt:\n\u001b[32m    578\u001b[39m         \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m    579\u001b[39m             \u001b[38;5;28;01mreturn\u001b[39;00m cls._AXIS_TO_AXIS_NUMBER[axis]\n\u001b[32m    580\u001b[39m         \u001b[38;5;28;01mexcept\u001b[39;00m KeyError:\n\u001b[32m--> \u001b[39m\u001b[32m581\u001b[39m             \u001b[38;5;28;01mraise\u001b[39;00m ValueError(f\"No axis named {axis} for object type {cls.__name__}\")\n",
-            "\u001b[31mValueError\u001b[39m: No axis named red for object type DataFrame"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "x = q10.query('green>=0.4')\n",
-        "x.mean('red')"
+        "avg = np.mean(x[\"red\"])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 43,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p10 = ..."
+        "p10 = avg"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "np.float64(0.6901411959523809)"
+            ]
+          },
+          "execution_count": 44,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p10"
       ]
@@ -941,20 +931,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 45,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p11 = ..."
+        "p11 = 3"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "execution_count": 46,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p11"
       ]
