more answers filled in

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -4724,7 +4724,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 131,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -4735,41 +4735,163 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 132,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "np.float64(-0.6372529878771659)"
+            ]
+          },
+          "execution_count": 132,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "mean = np.mean(q18)\n",
+        "sd = np.std(q18,ddof=1)\n",
+        "n = len(q18)\n",
+        "x = 2\n",
+        "t_stat = (mean-x)/(sd/np.sqrt(n))\n",
+        "t_stat"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 133,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "np.float64(0.7240041037269449)"
+            ]
+          },
+          "execution_count": 133,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "from scipy import stats\n",
+        "p_value = 1-(stats.t.cdf(t_stat,(n-1)))\n",
+        "p_value"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 124,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p18a = ..."
+        "p18a = t_stat"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 125,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "np.float64(-0.637252987877166)"
+            ]
+          },
+          "execution_count": 125,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p18a"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 129,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "execution_count": 129,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# YOUR CHANGES HERE\n",
-        "\n",
-        "# use 5% threshold on both sides\n",
-        "p18b = ..."
+        "df = len(q18)-1\n",
+        "df"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 130,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "np.float64(0.27599589627305515)"
+            ]
+          },
+          "execution_count": 130,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "p_value = stats.t.cdf(t_stat, df)\n",
+        "p_value"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 139,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "False\n"
+          ]
+        }
+      ],
+      "source": [
+        "# YOUR CHANGES HERE\n",
+        "\n",
+        "# use 5% threshold on both sides\n",
+        "p18b = p_value < 0.05\n",
+        "left = (1-p_value) < 0.05\n",
+        "print(left)\n",
+        "p18b=False"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 140,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 140,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p18b"
       ]
