--- a/homework.ipynb
+++ b/homework.ipynb
@@ -174,27 +174,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# YOUR CHANGES HERE\n",
-        "\n",
-        "p3 = ..."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 150,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Ellipsis"
+              "np.float64(4.743416490252569)"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 150,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "np.sqrt(90*(0.5**2))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 151,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# YOUR CHANGES HERE\n",
+        "\n",
+        "p3 = np.sqrt(90*(0.5**2))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 152,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "np.float64(4.743416490252569)"
+            ]
+          },
+          "execution_count": 152,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -277,27 +297,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 153,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p5 = ..."
+        "p5 = 0.125"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 154,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Ellipsis"
+              "0.125"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 154,
           "metadata": {},
           "output_type": "execute_result"
         }
