--- a/homework.ipynb
+++ b/homework.ipynb
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -88,27 +88,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p1 = 50"
+        "p1 = .50"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "50"
+              "0.5"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -130,7 +130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -141,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -150,7 +150,7 @@
               "900"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -174,7 +174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 150,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -183,7 +183,7 @@
               "np.float64(4.743416490252569)"
             ]
           },
-          "execution_count": 150,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -194,7 +194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 151,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -205,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 152,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -214,7 +214,7 @@
               "np.float64(4.743416490252569)"
             ]
           },
-          "execution_count": 152,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -246,13 +246,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 14,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "np.float64(0.7071067811865476)"
+            ]
+          },
+          "execution_count": 14,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p4 = 0.707"
+        "p4 = np.sqrt((0.5**2)+ (0.5**2))\n",
+        "p4"
       ]
     },
     {
@@ -413,6 +425,52 @@
       "cell_type": "code",
       "execution_count": 17,
       "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "np.float64(-0.4477746562255928)"
+            ]
+          },
+          "execution_count": 17,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "x = s6\n",
+        "mean = np.mean(q6)\n",
+        "sd = np.std(q6, ddof=1)\n",
+        "z = (x-mean)/(sd)\n",
+        "z"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "np.float64(0.3271579179024938)"
+            ]
+          },
+          "execution_count": 20,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "from scipy.stats import norm\n",
+        "prob = norm.cdf(z)\n",
+        "prob"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {},
       "outputs": [],
       "source": [
         "from scipy.stats import norm\n",
@@ -426,27 +484,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p6 = cdf_value"
+        "p6 = 0.32"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "np.float64(0.32634423791103867)"
+              "0.32"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 25,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -518,7 +576,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [
         {
@@ -527,7 +585,32 @@
               "-1.9166666666666665"
             ]
           },
-          "execution_count": 22,
+          "execution_count": 27,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "mean = 4.6\n",
+        "sd = 1.2\n",
+        "x = 2.3\n",
+        "\n",
+        "z = (x-mean)/sd\n",
+        "z"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "-1.9166666666666665"
+            ]
+          },
+          "execution_count": 26,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -539,29 +622,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "np.float64(0.9723598537069896)"
+              "np.float64(0.027640146293010405)"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 28,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "from scipy.stats import norm\n",
-        "p_value = (1-norm.cdf(z))\n",
+        "p_value = (norm.cdf(z))\n",
         "p_value"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -572,16 +655,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "np.float64(0.9723598537069896)"
+              "np.float64(0.027640146293010405)"
             ]
           },
-          "execution_count": 25,
+          "execution_count": 30,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -5108,7 +5191,7 @@
       "toc_visible": false
     },
     "kernelspec": {
-      "display_name": ".venv (3.12.1)",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
