homework with revisions

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -1111,7 +1111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1124,44 +1124,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 33,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "np.float64(0.0030403432521644447)"
-            ]
-          },
-          "execution_count": 63,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "# YOUR ANSWER HERE\n",
         "\n",
-        "p13 = np.std([f13(x) for x in range(0, 10000)], ddof=1)\n",
-        "p13\n"
+        "sd_of_values = np.std([f13(x) for x in range(0, 10000)], ddof=1)\n",
+        "sd_of_distribution = 3\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "np.float64(0.0030403432521644447)"
+              "3"
             ]
           },
-          "execution_count": 65,
+          "execution_count": 34,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
+        "p13 = sd_of_distribution\n",
         "p13"
       ]
     },
@@ -5094,7 +5084,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -5106,28 +5096,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 146,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [],
       "source": [
         "mean = np.mean(q20)\n",
         "sd = np.std(q20,ddof=1)\n",
         "n = len(q20)\n",
-        "x = 0.03"
+        "x = 0.0"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 147,
+      "execution_count": 38,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "np.float64(0.06521158182344308)"
+              "np.float64(0.6367728838002948)"
             ]
           },
-          "execution_count": 147,
+          "execution_count": 38,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -5139,7 +5129,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 148,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -5150,16 +5140,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 149,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "np.float64(0.06521158182344308)"
+              "np.float64(0.6367728838002948)"
             ]
           },
-          "execution_count": 149,
+          "execution_count": 40,
           "metadata": {},
           "output_type": "execute_result"
         }
