hw with revisions

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -88,27 +88,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 41,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p1 = .50"
+        "p1 = .55"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 42,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "0.5"
+              "0.55"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 42,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -495,16 +495,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 44,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "0.32"
+              "np.float64(0.31)"
             ]
           },
-          "execution_count": 25,
+          "execution_count": 44,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "p6 = np.mean(q6 <= s6)\n",
+        "p6\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "np.float64(0.31)"
+            ]
+          },
+          "execution_count": 45,
           "metadata": {},
           "output_type": "execute_result"
         }
